--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
+    "expo-app-loading": "^2.1.1",
+    "expo-checkbox": "^2.5.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
     "react": "18.2.0",
