--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
     "expo-app-loading": "^2.1.1",
-    "expo-checkbox": "^2.5.0",
+    "expo-checkbox": "~2.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.8",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
     "react": "18.2.0",
