--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
@@ -21,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dotenv": "^3.4.9",
+    "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
