--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
     "expo-app-loading": "^2.1.1",
-    "expo-checkbox": "~2.4.0",
+    "expo-checkbox": "^2.5.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.8",
     "expo-status-bar": "~1.6.0",
