--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.11",
     "expo-app-loading": "^2.1.1",
+    "expo-checkbox": "~2.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.8",
     "expo-status-bar": "~1.6.0",
@@ -31,6 +32,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
