--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.11",
