--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-community/slider": "4.4.2",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.14",
+    "@types/react-native-table-component": "^1.2.5",
     "expo": "~49.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-checkbox": "~2.4.0",
@@ -30,6 +30,7 @@
     "react-native": "0.72.5",
     "react-native-dotenv": "^3.4.9",
     "react-native-image-picker": "^7.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
