--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "strict": true
   },
-  "typeRoots": ["./types"]
+  "typeRoots": ["./types"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
