feat: Add Card screen updated

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.14",
+    "@stripe/stripe-react-native": "^0.34.0",
     "@types/react-native-table-component": "^1.2.5",
     "expo": "~49.0.11",
     "expo-app-loading": "^2.1.1",
@@ -39,7 +40,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-table-component": "^1.2.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "stripe": "^14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
